--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>NIKOLA NAUMOV</h1>
-<p>Web developer and desinger</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>NikolaNaumov.com</title>
+  </head>
+  <body>
+    <h1>NIKOLA NAUMOV</h1>
+    <p>Web developer and desinger</p>
+  </body>
 </html>
