--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
   <body>
     <h1>NIKOLA NAUMOV</h1>
     <p>Web developer and desinger</p>
+    <a href="tel:+447447703306"> Call me!</a>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-88075703-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-88075703-3');
+</script>
+
   </body>
 </html>
