title rename, more text

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8">
 	<meta name="description" content="Web development/design">
 	<meta name="theme-color" content="#F7931E">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="mobile-web-app-capable" content="yes">
 
 	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
 	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
-    <title>NikolaNaumov.com</title>
+    <title>bat6oko.github.io</title>
   </head>
   <body>
-    <h1>NIKOLA NAUMOV</h1>
-    <p>Web developer and desinger</p>
-    <a href="tel:+447447703306"> Call me!</a>
+    <h1>My name is NIKOLA NAUMOV</h1>
+    <p>and i'm a web developer and desinger living in Barnet, LONDON.</p>
+    <a href="tel:+447447703306"><button>Call me</button></a>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88075703-3"></script>
 <script>
